# ErocoolAPI_rust

./: Cargo.toml  README.md
src/: ehentai.rs  main.rs
