[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
scraper = "0.16.0"
regex = "1.7.0"
log = "0.4"